test/type/fail/plus_wrong.j
class A{
  Void main() {
    return (this + 5);
  }
}
